--- a/apps/box/ios/Podfile
+++ b/apps/box/ios/Podfile
@@ -101,6 +101,7 @@ target 'Box' do
         config.build_settings['HEADER_SEARCH_PATHS'] ||= '$(inherited) '
         config.build_settings['HEADER_SEARCH_PATHS'] << '"$(PODS_ROOT)/Headers/Private/React-bridging/react/bridging" '
         config.build_settings['HEADER_SEARCH_PATHS'] << '"$(PODS_CONFIGURATION_BUILD_DIR)/React-bridging/react_bridging.framework/Headers" '
+        config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
       end
     end 
   end
