--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "axios": "^0.27.2",
     "big-integer": "^1.6.51",
     "ethers": "5.7.2",
-    "expo": "^46.0.0-alpha.2",
+    "expo": "^47.0.13",
     "expo-gl": "^11.4.0",
     "expo-three": "^6.1.0",
     "lodash": "^4.17.21",
@@ -53,7 +53,7 @@
     "react-native-ble-manager": "^10.0.2",
     "react-native-device-info": "^10.0.2",
     "react-native-fula": "^0.3.1",
-    "react-native-gesture-handler": "^2.5.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-get-random-values": "^1.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^8.1.1",
@@ -62,7 +62,7 @@
     "react-native-pager-view": "^6.0.1",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "^3.0.0-rc.0",
+    "react-native-reanimated": "^3.4.2",
     "react-native-reanimated-carousel": "^3.0.3",
     "react-native-redash": "^17.0.0",
     "react-native-safe-area-context": "^4.2.5",
