--- a/apps/box/ios/Podfile
+++ b/apps/box/ios/Podfile
@@ -83,8 +83,18 @@ target 'Box' do
     end
   end
   post_install do |installer|
-    react_native_post_install(installer)
+    # First part, using 'installer'
+    react_native_post_install(
+      installer
+    )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+
+    # Second part, 'installer' used in place of 'pi'
+    installer.pods_project.targets.each do |t|
+      t.build_configurations.each do |config|
+        config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
+      end
+    end
     __apply_Xcode_14_3_RC_post_install_workaround(installer)
     #Fix the packages sign issue in xcode 14.x 
     installer.pods_project.targets.each do |target|
@@ -103,5 +113,14 @@ target 'Box' do
         config.build_settings['HEADER_SEARCH_PATHS'] << '"$(PODS_CONFIGURATION_BUILD_DIR)/React-bridging/react_bridging.framework/Headers" '
       end
     end 
+   
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        # Targets that do not support m1 simulator
+        if ['Lib1', 'Lib2'].include? target.name
+          config.build_settings['ARCHS[sdk=iphonesimulator*]'] = 'x86_64'
+        end
+      end
+    end
   end
 end
