--- a/apps/box/tsconfig.json
+++ b/apps/box/tsconfig.json
@@ -13,10 +13,10 @@
   "include": [],
   "references": [
     {
-      "path": "./tsconfig.app.json"
+      "path": "./tsconfig.app.json",
     },
     {
-      "path": "./tsconfig.spec.json"
+      "path": "./tsconfig.spec.json",
     }
   ],
   "exclude": ["node_modules"]
