--- a/package.json
+++ b/package.json
@@ -17,119 +17,132 @@
   },
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.8.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0-0",
+    "@babel/plugin-transform-arrow-functions": "^7.0.0-0",
+    "@babel/plugin-transform-shorthand-properties": "^7.0.0-0",
+    "@babel/plugin-transform-template-literals": "^7.0.0-0",
+    "@babel/preset-env": "^7.1.6",
     "@functionland/fula-sec": "^2.0.0",
     "@functionland/react-native-fula": "^1.14.8",
-    "@gorhom/bottom-sheet": "^4",
-    "@react-native-async-storage/async-storage": "1.19.8",
-    "@react-native-clipboard/clipboard": "^1.10.0",
-    "@react-native-community/netinfo": "^9.3.7",
-    "@react-native-community/slider": "^4.2.4",
-    "@react-native-firebase/app": "^18.1.0",
-    "@react-native-firebase/crashlytics": "^18.1.0",
-    "@react-native-picker/picker": "^2.4.2",
-    "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/material-top-tabs": "^6.2.4",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.2",
-    "@react-navigation/stack": "^6.3.2",
-    "@react-spring/three": "^9.5.0",
-    "@react-three/fiber": "^8.1.0",
-    "@shopify/react-native-skia": "^0.1.195",
-    "@shopify/restyle": "^2.1.0",
-    "@visx/scale": "^2.2.2",
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-clipboard/clipboard": "^1.12.1",
+    "@react-native-community/netinfo": "^11.1.1",
+    "@react-native-community/slider": "^4.4.3",
+    "@react-native-firebase/app": "^18.7.1",
+    "@react-native-firebase/crashlytics": "^18.7.1",
+    "@react-native-picker/picker": "^2.6.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-top-tabs": "^6.6.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "@react-spring/three": "^9.7.3",
+    "@react-three/fiber": "^8.15.11",
+    "@shopify/react-native-skia": "^0.1.224",
+    "@shopify/restyle": "^2.4.2",
+    "@visx/scale": "^3.5.0",
     "@walletconnect/encoding": "^1.0.2",
-    "@walletconnect/modal-react-native": "^1.0.0-rc.11",
-    "axios": "^0.27.2",
-    "big-integer": "^1.6.51",
-    "ethers": "5.7.2",
-    "expo": "^46.0.0-alpha.2",
-    "expo-gl": "^11.4.0",
-    "expo-three": "^6.1.0",
+    "@walletconnect/modal-react-native": "^1.0.0-rc.14",
+    "axios": "^1.6.2",
+    "big-integer": "^1.6.52",
+    "ethers": "6.9.0",
+    "expo": "^49.0.21",
+    "expo-asset": "*",
+    "expo-file-system": "^13.2.0",
+    "expo-font": "*",
+    "expo-gl": "^13.2.0",
+    "expo-modules-core": "*",
+    "expo-three": "^7.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "node-libs-react-native": "^1.2.1",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.6",
-    "react-native-ble-manager": "^10.0.2",
-    "react-native-device-info": "^10.0.2",
+    "react-native-ble-manager": "^10.1.5",
+    "react-native-device-info": "^10.12.0",
     "react-native-fula": "^0.3.1",
-    "react-native-gesture-handler": "^2.5.0",
-    "react-native-get-random-values": "^1.9.0",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-keychain": "^8.1.1",
-    "react-native-localize": "^2.2.2",
+    "react-native-keychain": "^8.1.2",
+    "react-native-localize": "^3.0.4",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "^6.0.1",
-    "react-native-qrcode-svg": "^6.1.2",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "^3.0.0-rc.0",
-    "react-native-reanimated-carousel": "^3.0.3",
-    "react-native-redash": "^17.0.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-redash": "^18.1.1",
     "react-native-safe-area-context": "4.7.4",
-    "react-native-screens": "^3.13.1",
-    "react-native-svg": "13.9.0",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-native-tab-view": "^3.2.1",
-    "react-native-webview": "^11.25.0",
+    "react-native-screens": "^3.27.0",
+    "react-native-svg": "^13.2.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-webview": "^13.6.3",
     "react-native-wheel-color-picker": "^1.2.0",
-    "react-native-wifi-reborn": "^4.6.0",
+    "react-native-wifi-reborn": "^4.10.1",
     "react-native-zeroconf": "^0.13.8",
     "text-encoding-polyfill": "^0.6.7",
-    "three": "^0.142.0",
-    "tslib": "^2.3.0",
-    "zustand": "^4.0.0"
+    "three": "^0.145.0",
+    "tslib": "^2.6.2",
+    "webpack": "^4.0.0 || ^5.0.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@nrwl/js": "17.1.3",
     "@nrwl/workspace": "17.1.3",
+    "@nx/detox": "17.1.3",
     "@nx/eslint": "17.1.3",
     "@nx/eslint-plugin": "17.1.3",
-    "@react-native-community/cli": "11.3.7",
-    "@react-native-community/cli-platform-android": "11.3.7",
-    "@react-native-community/cli-platform-ios": "11.3.7",
+    "@nx/jest": "17.1.3",
+    "@nx/react-native": "17.1.3",
+    "@nx/web": "17.1.3",
+    "@react-native-community/cli": "12.2.0",
+    "@react-native-community/cli-platform-android": "12.2.0",
+    "@react-native-community/cli-platform-ios": "12.2.0",
     "@react-native-community/eslint-config": "^3.0.2",
-    "@react-native/metro-config": "^0.72.9",
-    "@testing-library/jest-dom": "^5.16.4",
+    "@react-native/metro-config": "^0.73.2",
+    "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/jest-native": "5.4.3",
-    "@testing-library/react-native": "12.3.3",
+    "@testing-library/react-native": "12.4.1",
     "@types/axios": "^0.14.0",
-    "@types/jest": "29.4.4",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "18.14.4",
-    "@types/react": "18.0.8",
-    "@types/three": "^0.141.0",
+    "@types/jest": "29.5.10",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "20.10.1",
+    "@types/react": "18.2.39",
+    "@types/three": "^0.159.0",
     "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.13.1",
-    "babel-jest": "29.4.3",
+    "babel-jest": "29.7.0",
     "detox": "20.13.5",
-    "eslint": "8.46.0",
+    "eslint": "8.54.0",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "^26.4.6",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.5.0",
-    "jest": "29.4.3",
-    "jest-circus": "27.5.1",
-    "jest-environment-jsdom": "28.1.3",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "29.7.0",
+    "jest-circus": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-react-native": "18.0.0",
-    "metro": "0.76.8",
-    "metro-babel-register": "0.76.8",
-    "metro-react-native-babel-preset": "0.76.8",
-    "metro-resolver": "0.76.8",
+    "metro": "0.80.1",
+    "metro-babel-register": "0.80.1",
+    "metro-react-native-babel-preset": "0.77.0",
+    "metro-resolver": "0.80.1",
     "nx": "17.1.3",
-    "prettier": "2.7.1",
-    "react-native-config": "1.5.0",
+    "prettier": "3.1.0",
+    "react-native-config": "1.5.1",
     "react-test-renderer": "18.2.0",
     "ts-jest": "29.1.1",
-    "ts-node": "10.8.1",
-    "typescript": "4.7.4",
-    "@nx/web": "17.1.3",
-    "@nx/jest": "17.1.3",
-    "@nx/detox": "17.1.3",
-    "@nx/react-native": "17.1.3"
+    "ts-node": "10.9.1",
+    "typescript": "5.3.2"
   },
   "resolutions": {
     "react-native-svg": "12.3.0",
