--- a/apps/box/tsconfig.json
+++ b/apps/box/tsconfig.json
@@ -7,6 +7,8 @@
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
+    "declaration": true,
+    "strict": true,
     "resolveJsonModule": true
   },
   "files": ["../../node_modules/@nx/react-native/typings/svg.d.ts"],
