--- a/libs/component-library/tsconfig.json
+++ b/libs/component-library/tsconfig.json
@@ -8,6 +8,9 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
+    "declaration": true,
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
     "noFallthroughCasesInSwitch": true
   },
   "files": [],
