--- a/apps/box/android/app/src/main/AndroidManifest.xml
+++ b/apps/box/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
       android:theme="@style/AppTheme"
       tools:replace="android:allowBackup"
       android:allowBackup="false"
+      android:usesCleartextTraffic="true"
       android:networkSecurityConfig="@xml/network_security_config">
       <activity
         android:name=".MainActivity"
