--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-0",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0-0",
+    "@babel/plugin-proposal-private-methods": "*",
     "@babel/plugin-transform-arrow-functions": "^7.0.0-0",
     "@babel/plugin-transform-shorthand-properties": "^7.0.0-0",
     "@babel/plugin-transform-template-literals": "^7.0.0-0",
-    "@babel/plugin-proposal-private-methods": "*",
     "@babel/preset-env": "^7.1.6",
     "@functionland/fula-sec": "^2.0.0",
-    "@functionland/react-native-fula": "1.36.4",
+    "@functionland/react-native-fula": "1.37.0",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-clipboard/clipboard": "^1.12.1",
@@ -42,6 +42,8 @@
     "@react-navigation/stack": "^6.3.20",
     "@react-spring/three": "^9.7.3",
     "@react-three/fiber": "^8.15.11",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@shopify/react-native-skia": "^0.1.224",
     "@shopify/restyle": "^2.4.2",
     "@visx/scale": "^3.5.0",
@@ -60,10 +62,12 @@
     "moment": "^2.29.4",
     "node-libs-react-native": "^1.2.1",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-ble-manager": "^10.1.5",
     "react-native-device-info": "^10.12.0",
+    "react-native-elements": "^3.4.3",
     "react-native-fula": "^0.3.1",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-get-random-values": "^1.10.0",
@@ -79,7 +83,7 @@
     "react-native-redash": "^18.1.1",
     "react-native-safe-area-context": "4.7.4",
     "react-native-screens": "^3.27.0",
-    "react-native-svg": "^13.2.0",
+    "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-webview": "^13.6.3",
