--- a/.github/workflows/android_deploy.yml
+++ b/.github/workflows/android_deploy.yml
@@ -41,6 +41,8 @@ jobs:
       run: |
         cd ${{ github.workspace }}/apps/box/android
         ./gradlew assembleRelease
+    - name: List Directory
+      run: ls -la ${{ github.workspace }}
     - name: Sign APK
       uses: r0adkll/sign-android-release@v1
       with:
