--- a/apps/box/android/app/src/main/AndroidManifest.xml
+++ b/apps/box/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" tools:remove="android:maxSdkVersion" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" tools:remove="android:maxSdkVersion" />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"
+                     android:usesPermissionFlags="neverForLocation" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION" android:maxSdkVersion="30"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:maxSdkVersion="28"/>
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" 
                  tools:node="remove"/>
 
@@ -16,6 +23,7 @@
       tools:replace="android:allowBackup"
       android:allowBackup="false"
       android:usesCleartextTraffic="true"
+      android:supportsRtl="true"
       android:networkSecurityConfig="@xml/network_security_config">
       <activity
         android:name=".MainActivity"
@@ -36,6 +44,9 @@
         </intent-filter>
       </activity>      
       <service android:name="com.asterinet.react.bgactions.RNBackgroundActionsTask"  android:exported="false" />
-      <service android:name="app.notifee.core.ForegroundService" android:foregroundServiceType="dataSync" />
+      <service 
+        android:name="app.notifee.core.ForegroundService" 
+        android:foregroundServiceType="dataSync"
+        tools:replace="android:foregroundServiceType" />
     </application>
 </manifest>
