--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
     "react-native-background-timer": "^2.4.1",
-    "react-native-ble-manager": "^10.1.5",
+    "react-native-ble-manager": "^11.5.7",
     "react-native-device-info": "^10.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
@@ -165,5 +165,6 @@
   "resolutions": {
     "react-native-svg": "12.3.0",
     "react-native-redash": "^17.0.0"
-  }
+  },
+  "packageManager": "yarn@3.6.4+sha512.e70835d4d6d62c07be76b3c1529cb640c7443f0fe434ef4b6478a5a399218cbaf1511b396b3c56eb03bc86424cff2320f6167ad2fde273aa0df6e60b7754029f"
 }
