--- a/.github/workflows/android_deploy.yml
+++ b/.github/workflows/android_deploy.yml
@@ -47,24 +47,62 @@ jobs:
       run: echo "NPM_PACKAGE_VERSION=$(node -p "require('${{ github.workspace }}/apps/box/package.json').version")" >> $GITHUB_ENV
     - name: Show GITHUB_ENV
       run: echo $GITHUB_ENV
+    - name: Decode Keystore
+      run: echo "${{ secrets.SIGNING_KEY_BASE64 }}" | base64 -d > ${{ github.workspace }}/apps/box/android/app/signingKey.jks
     - name: Build Android Release
       run: |
         cd ${{ github.workspace }}/apps/box/android
-        ./gradlew assembleRelease
+        chmod +x gradlew
+        ./gradlew bundleRelease -Pandroid.injected.signing.store.file=$GITHUB_WORKSPACE/apps/box/android/app/signingKey.jks -Pandroid.injected.signing.store.password=$KEY_STORE_PASSWORD -Pandroid.injected.signing.key.alias=$KEY_ALIAS -Pandroid.injected.signing.key.password=$KEY_PASSWORD
+      env:
+        KEY_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
+        KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+        KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+    
     - name: List Directory
-      run: ls -la ${{ github.workspace }}/apps/box/android/app/build/outputs/apk/release
-    - name: Sign APK
-      uses: r0adkll/sign-android-release@v1
+      run: ls -la ${{ github.workspace }}/apps/box/android/app/build/outputs/bundle/release
+      
+    - name: Get Release Info
+      id: get-release-info
+      uses: actions/github-script@v5
       with:
-        releaseDirectory: ${{ github.workspace }}/apps/box/android/app/build/outputs/apk/release
-        signingKeyBase64: ${{ secrets.SIGNING_KEY_BASE64 }}
-        alias: ${{ secrets.KEY_ALIAS }}
-        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-        keyPassword: ${{ secrets.KEY_PASSWORD }}
-    - name: Deploy to Google Play
-      uses: r0adkll/upload-google-play@v1
+        script: |
+            let uploadUrl = 0;
+            try {
+              const release = await github.rest.repos.getLatestRelease({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+              });
+              uploadUrl = release.data.id;
+            } catch (error) {
+              console.log('Error fetching latest release: ', error.message);
+            }
+            return uploadUrl;
+      
+    - name: Print release upload URL
+      run: echo "Upload URL is ${{ steps.get-release-info.outputs.result }}"
+      
+    - name: Upload Update File Parts to Release
+      uses: actions/github-script@v5
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-        packageName: land.fx.blox
-        releaseFiles: ${{ github.workspace }}/apps/box/android/app/build/outputs/apk/release/app-release.apk
-        track: production
+        script: |
+            const fs = require('fs');
+            const path = require('path');
+            const directory = '${{ github.workspace }}/apps/box/android/app/build/outputs/bundle/release';
+            const files = fs.readdirSync(directory);
+            for (const file of files) {
+              if (file.startsWith('app')) {
+                const filePath = path.join(directory, file);
+                console.log(`Uploading ${file}...`);
+                await github.rest.repos.uploadReleaseAsset({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  release_id: ${{ steps.get-release-info.outputs.result }},
+                  name: `FxBlox_${file}`,
+                  data: fs.readFileSync(filePath)
+                });
+              }
+            }
+      
