--- a/apps/box/ios/Podfile
+++ b/apps/box/ios/Podfile
@@ -29,7 +29,7 @@ end
 
 target 'Box' do
   pod 'Fula', :podspec => 'https://raw.githubusercontent.com/functionland/go-fula/main/Fula.podspec'
-  pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec', :modular_headers => false
+  #pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec', :modular_headers => false
   config = use_native_modules!
 
   # Flags change depending on the env values.
